CSS bug fixes
Fixed button hovering on side bar from highlighting overlapping area by defining padding in .navLink, forcing the actual "button" sizes to match the page's appearance and correcting highlighting.

Also fixed page being too wide by removing "width: 100%" from nav ul, preventing the top navigation bar from stretching too far.

--- a/style.css
+++ b/style.css
@@ -17,15 +17,14 @@ body{
     padding: 10px 5vw;
     box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
     list-style: none;
-
 }
 
 .navLink{
     list-style: none;
+	padding: 20px 30px;
 }
 
 nav ul{
-     width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
